--- a/MyVideoRecoderLib/src/main/res/layout/activity_recoder.xml
+++ b/MyVideoRecoderLib/src/main/res/layout/activity_recoder.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.myvideorecoderlib.recoder.RecordView
+    <com.example.myvideorecoderlib.recorder.RecordView
         android:id="@+id/recordView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +15,7 @@
         app:videoHeight="480"
         app:videoWidth="720" />
 
-    <com.example.myvideorecoderlib.recoder.RecordControllerLayout
+    <com.example.myvideorecoderlib.recorder.RecordControllerLayout
         android:id="@+id/layout_controller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
