--- a/MyVideoRecoderLib/src/main/res/layout/activity_recoder2.xml
+++ b/MyVideoRecoderLib/src/main/res/layout/activity_recoder2.xml
@@ -4,12 +4,12 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.myvideorecoderlib.Utils.ScreenAdapterLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.example.myvideorecoderlib.utils.ScreenAdapterLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <com.example.myvideorecoderlib.recoder.RecordView
+        <com.example.myvideorecoderlib.recorder.RecordView
             android:id="@+id/recordView2"
             android:layout_width="108dp"
             android:layout_height="192dp"
@@ -28,10 +28,10 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
             android:layout_gravity="center"
             android:visibility="gone"/>
 
-    </com.example.myvideorecoderlib.Utils.ScreenAdapterLayout>
+    </com.example.myvideorecoderlib.utils.ScreenAdapterLayout>
 
 
-    <com.example.myvideorecoderlib.recoder.RecordControllerLayout
+    <com.example.myvideorecoderlib.recorder.RecordControllerLayout
         android:id="@+id/layout_controller2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
