modify the mvp constructor

--- a/app/src/main/res/layout/activity_video_review.xml
+++ b/app/src/main/res/layout/activity_video_review.xml
@@ -21,8 +21,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videorv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:layout_height="match_parent"/>
 
     <GridView
         android:layout_width="match_parent"
